kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sleepypod
  labels:
    name: myapp
spec:
  containers:
  - name: sleepycontainer
    image: gcr.io/google_containers/busybox
    command:
      - sleep
      - "6000"
    volumeMounts:
      - name: data
        mountPath: /data
        readOnly: false
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    # ports:
    #   - containerPort: <Port>
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: mypvc
