kubernetes/mysql-services.yaml
# Headless service for stable DNS entries of StatefulSet members.

apiVersion: v1

kind: Service

metadata:

  name: mysql
  namespace: django-namespace

  labels:

    app: mysql

    app.kubernetes.io/name: mysql

spec:

  ports:

  - name: mysql

    port: 3306

  clusterIP: None

  selector:

    app: mysql

---

# Client service for connecting to any MySQL instance for reads.

# For writes, you must instead connect to the primary: mysql-0.mysql.

apiVersion: v1

kind: Service

metadata:

  name: mysql-read
  namespace: django-namespace

  labels:

    app: mysql

    app.kubernetes.io/name: mysql

    readonly: "true"

spec:

  ports:

  - name: mysql

    port: 3306

  selector:

    app: mysql
